Changes to hailcaesar chapter

--- a/chapter_hailcaesar.tex
+++ b/chapter_hailcaesar.tex
@@ -53,7 +53,7 @@ The flexibility of the object-oriented framework allows the user finer control o
 
 \subsubsection{Catchment hydrology}
 
-Runoff from rainfall inputs to the catchment is generated using an adaptation of the TOPMODEL hydrological model \citep{beven1979physically}. The TOPMODEL approach first calculates a combined surface and subsurface discharge for the cells within a `wetted' zone of the catchment \citep{coulthard2002cellular}. When local rainfall rate is greater than zero, total runoff, \(Q_{tot}\), for a grid cell is given by 
+Runoff from rainfall inputs to the catchment is generated using an adaptation of the TOPMODEL hydrological model \citep{beven1979physically}. The TOPMODEL approach first calculates a combined surface and subsurface discharge for the cells within a `wetted' zone of the catchment \citep{coulthard2002cellular}. The wetted cells approach has the advantage of reducing the number of cells that must be scanned every model iteration, lowering computational cost of the model run. When local rainfall rate in a given grid cell is greater than zero, the total runoff, \(Q_{tot}\), for a grid cell is given by: 
 
 \begin{equation}
 Q_{tot} = \frac{m}{T} \log \left( \frac{(r-j_t) + \exp \left(\frac{rT}{m} \right)}{r} \right)
@@ -115,7 +115,7 @@ where \(k_e\) is the bedrock erodibility coefficient, \(\tau_b\) is the basal sh
 \subsection{Parallelisation implementation}
 The HAIL-CAESAR code is parallelised using a shared-memory parallelisation model. In brief, the shared-memory technique works by distributing the processing load to multiple processing units that all have access to the same memory address space. The HAIL-CAESAR code uses the OpenMP application programming interface (API), which is widely supported on a range of software platforms and computing architectures \citep{dagum1998openmp}. Shared-memory parallel codes such as the one described in this paper are suitable for any computing system where the physical processors have access to the same memory space. A wide range of systems can avail of shared-memory parallel codes, from multi-core desktop computers, through high-end multi-processor, multi-core workstations, to individual compute nodes on high performance computing services (HPC). The code presented has been tested on a wide range of architectures including desktop computers,  small-scale cluster computing facilities, and national scale HPC services.
 
-The main functions in the program that are parallelisable, and most computationally expensive, are the water routing algorithm (\textit{flow\_route}), the erosion routines (\textit{erode}), the water depth update function (\textit{depth\_update}), and the catchment wetted-area scanning function (\textit{scan\_area}). These were identified by profiling the serial version of the code using the \textit{gprof} profiling tool \citep{graham1982gprof}, and the results are shown in Tables \ref{profile_speed_up_hydro} and \ref{profile_speed_up_erode}.
+The main functions in the program that are parallelisable, and most computationally expensive, are the water routing algorithm (\textit{flow\_route}), the erosion routines (\textit{erode}), the water depth update function (\textit{depth\_update}), and the catchment wetted-area scanning function (\textit{scan\_area}). These were identified by profiling the serial version of the code using the \textit{gprof} profiling tool \citep{graham1982gprof}, and the results are shown in Tables \ref{profile_speed_up_hydro} and \ref{profile_speed_up_erode}. Initially, it may appear that using a wetted-cells approach with the \textit{scan\_area} function would be a counter-intuitive way to reduce computation time, as the \textit{scan\_area} function is computationally expensive itself. However, preliminary experimentation with removing the \textit{scan\_area} function (and scanning all cells in the catchment every iteration) showed that in fact the computational expense of calling this function was far outweighed by the large reduction in cells that had to be scanned every iteration. In practice this is likely due to the fact that catchments are rarely inundated totally, even during flood events, as only the floodplains maintain a significant depth of water. The number of wetted cells is therefore likely to be much smaller than the total number of grid cells in the model domain for the majority of cases, and the wetted cell scanning function (\textit{scan\_area}) overall reduces computation time.
 
 \begin{table}
 \caption{Summary of most expensive program functions, using a test case of a 48 hour flood simulation, with the model run in \textbf{hydrology-only mode}. The test case is based on the flooding that took place in the Boscastle catchment in August 2004, in Cornwall, UK \citep{golding2005boscastle}.}
@@ -316,7 +316,23 @@ Regression testing is a software development practice used to verify that softwa
 
 Three metrics are used to compare the two models (and choice of compiler in HAIL-CAESAR): water discharge rate from the catchment outlet, hourly sediment output, and cumulative sediment output from the catchment over the course of the simulation. 
 Figure \ref{fig_swale_regression_lisflood} shows the differences in water discharge comparing HAIL-CAESAR with the original CAESAR-Lisflood model. (For clarity, only the first 250 days are shown.) The flow routing algorithm performs similarly in both models, with the largest discrepancies seen in the first 100 days. An inset in Figure \ref{fig_swale_regression_lisflood} shows the typical magnitude and timing of differences in the discharge. The timing and magnitude of the largest flood peaks are comparable, and the largest differences in magnitude on the order of 1--10 \(m^3s^{-1}\).
-Figure \ref{fig_swale_regression_sediment} shows the sediment flux from the catchment outlet. While there is low-magnitude variation in the sediment flux signal, the main peaks in sediment discharge are at similar times and of similar magnitude in both implementations. Figure \ref{fig_swale_regression_cum_sediment} shows the cumulative sediment output from the catchment. Initially, both implementations show close agreement, until approximately 700 days into the test simulation where the predicted sediment totals begin to diverge. The CAESAR-Lisflood implementation, in this case, predicts an overall lower total sediment discharge over the 10-year period. The HAIL-CAESAR implementation predicts c. 40\% greater total sediment yields after 10 years. 
+Figure \ref{fig_swale_regression_sediment} shows the sediment flux from the catchment outlet. While there is low-magnitude variation in the sediment flux signal, the main peaks in sediment discharge are at similar times and of similar magnitude in both implementations. Figure \ref{fig_swale_regression_cum_sediment} shows the cumulative sediment output from the catchment. Initially, both implementations show close agreement, until approximately 700 days into the test simulation where the predicted sediment totals begin to diverge. The CAESAR-Lisflood implementation, in this case, predicts an overall lower total sediment discharge over the 10-year period. The HAIL-CAESAR implementation predicts c. 40\% greater total sediment yields after 10 years.
+
+\subsection{Differences in sediment flux and yields between models and compilers}
+
+Several factors may explain the small differences seen between the sediment outputs of the two models (HAIL-CAESAR vs CAESAR-Lisflood) and also in the comparison between the two compilers used to test HAIL-CAESAR. The sediment flux differences are shown in detail for first 250 days of the Swale test simulation in Figure \ref{fig_swale_regression_sediment}.
+
+Firstly, floating point numbers cannot be represented exactly in computer memory, due to a finite amount of memory or `bits' that may be used to store each number. In the case of these tests, a \textit{64-bit} data type is used to store numbers. Many calculations using real numbers will produce a result that cannot be represented in the finite number of bits provided by the system ($10 \div 3$, for example, results in 3.333333..., which cannot be stored precisely in a 64-bit data type, or indeed any finite-length data type). Many results such as this must therefore be rounded to fit back into their finite representation \citep{goldberg1991every}. The rounding error is a characteristic feature of floating-point arithmetic performed by computers. Multiplied over thousands or millions of calculations or iterations of the model, initial error can multiply over time and result in small but noticeable discrepancies within results. 
+Secondly, optimizing compilers are free to evaluate expressions in a different order, so long as it can be shown the optimisation would produce the same mathematical result. However, this does not guarantee that two compilers will produce the exact same \textit{numerical} result, since many floating point calculations do not have an exact result that can be represented with finite precision. If different compilers optimise calculations to be done in different orders, rounding errors may creep into the results at different stages of the calculation, resulting in slightly different final results \citep{goldberg1991every,monniaux2008pitfalls}.
+
+Optimisation in compilers can be switched off, and it is possible to force compilers to produce bit-for-bit comparable results, however this results in a significant performance drop in simulation times. Given the relatively small size of the numerical error shown in Figure \ref{fig_swale_regression_sediment} between the two models and the different compilers, it was not felt warranted to reduce performance significantly to produce exactly comparable sediment fluxes over these timescales.
+
+The effect of compiler and software system choice on the results from numerical models has also been observed in atmospheric models, where different optimisation techniques performed by different compilers resulted in small discrepancies between otherwise identical simulations using models compiled with different compilers. \citep{hong2013evaluation}. 
+
+Figure \ref{fig_swale_regression_cum_sediment} shows the cumulative sediment totals over a longer ten-year simulation, which although initially are very close matching across model implementation (HAIL-CAESAR vs CAESAR-Lisflood) and compiler choice for HAIL-CAESAR, a divergence between the HAIL-CAESAR results and the CAESAR-Lisflood results appears around the 750 day mark. The results here would indicate the while HAIL-CAESAR and CAESAR-Lisflood produce comparable results for simulations $<$ 750 days, at longer timescales the differences begin to diverge, producing up to  40\% difference after 10 years of simulated sediment output. This again is likely at least partly due to compiler differences producing inexact numerical results. \citet{hong2013evaluation} also find that software system differences produce greater error over longer simulation times, with atmospheric model runs diverging after several days given identical starting conditions but different compiler optimisations. It is believed that a similar effect is evident here. 
+Since the scope of this thesis is to investigate small-scale events at short timescales on the order of days, the diverging results at longer timescales were not deemed to be of great concern for the purpose of this study. Good agreement was found between the two models at much shorter timescales, which is sufficient for this study. However, future work on the HAIL-CAESAR model would ideally investigate these discrepancies further.
+
+A detailed analysis of the differences between the C\# compiler used for CAESAR-Lisflood and the Intel and GCC compilers used for HAIL-CAESAR is beyond the scope of this study, but compiler difference remains the most likely source of numerical error based on previously reported study \citep{hong2013evaluation} and established knowledge regarding numerical error in using floating-point arithmetic \citep{goldberg1991every,monniaux2008pitfalls}.
 
 \begin{sidewaysfigure*}[t]
 \includegraphics[width=25cm]{chp05_figures_scripts/lisflood_regerssion_new_colours13.png}
