--- a/chapter_rainfallLEMs.tex
+++ b/chapter_rainfallLEMs.tex
@@ -147,3 +147,28 @@ There is still a great deal of unexplored ground for developing landscape evolut
 \subsection{Technological advances and needs}
 
 Landscape evolution modellers have in general been reluctant to take advantage of emerging technology or high-performance computing (HPC) systems to explore bigger problems, or to explore uncertainty in model output through ensemble simulations. By way of contrast, in fields such as meteorology, mineralogy, particle physics, and engineering, the use of high-performance computing facilities is commonplace. In part, this is due to many problems in landscape evolution modelling stemming from a lack of agreement over geomorphic process laws. There is still considerable uncertainty over which geomorphic `laws' are best suited to represent certain natural processes, and the answer can be dependent on the environment being studied. As such, modelling simulations in landscape evolution have often focused on investigating the big-picture, broad-brushed questions about how landscapes evolve as a supplement to empirical field based studies. Geomorphologists, perhaps quite justifiably, have not yet required large-scale computing facilities used in other fields, as their questions can be answered satisfactorily with reduced complexity, and less computationally demanding numerical models. This is especially true as a large body of numerical landscape evolution modelling is used in an exploratory manner \citep{hancock2003effect,lancaster2003you,Tucker2010}, or to make observations that are partly qualitative. However, geomorphology is moving away from a purely qualitative era as a range of quantitative methods have been developed and deployed in recent studies incorporating landscape evolution modelling \citep[e.g.][]{Attal2011a,mudd2017detection}, such as absolute dating methods of landforms and sediments, as well as digital topographic analysis. Returning to the comparison with other fields and their use of high-performance computing, these fields often suffer the same problems in uncertainty that geomorphology does in the choice of process law or parameterisation used in a numerical simulation. However, this has not prevented them from judicious use of HPC in carrying out numerical simulations. In fact, one of the strengths of HPC facilities is the capability to assess many hundreds, if not thousands, of modelling scenarios and parameter choices in ensemble simulations. This use of HPC has helped to quantify the uncertainty in process laws and model parameters, a problem which geomorphology is not immune to \citep{Tucker2010,pelletier2015forecasting}. A drive towards making use of high-performance computing facilities is needed in geomorphology as problem sizes grow through the continued expansion in data coverage and resolution.
+
+\section{Model choice for further development: CAESAR-Lisflood}
+
+For the aims of this thesis (Chapter \ref{chapter_intro}), a numerical landscape evolution model that satisfies several requirements is needed:
+
+\begin{enumerate}
+\item Process representation including flood inundation and sediment transport using a variety of sediment transport laws
+\item Capable of simulation hourly-scale flood events (individual storms)
+\item Ability to utilise temporally and spatially variable rainfall data sources from gridded rainfall data products.
+\item Scalability to multi-processor computing environments, for conducting ensemble style simulations across multiple compute-nodes, preferably on high-performance computing systems.
+\end{enumerate}
+
+%processes 
+
+CAESAR-Lisflood, as discussed in previous sections, would appear to meet several of these criteria particularly (1) and (2), though less so for (3) and (4). CAESAR-Lisflood includes a well tested flood-inundation module, based on the established LISFLOOD 2D hydraulic model \citep{Bates1998}. It is therefore capable of representing water flow dynamics within the context of individual storms, when a river catchment is not at hydrological steady state\footnote{Water inputs are not equal to water outputs due to the transient movement of water through the catchment.}. The hydrodynamic nature of CAESAR-Lisflood can be contrasted to many other landscape evolution models which assume a hydrological steady state across a catchment during storm events (e.g. CHILD). CAESAR-Lisflood also features two sediment transport laws, though neither of them are a bedrock incision-based erosion law, such as found in CHILD. CAESAR-Lisflood therefore lacks a range of erosion laws covering the full spectrum or erosional processes, instead focusing on what are termed `transport-limited' erosion laws, i.e. those limited by the rate of sediment transport that can be transported by flowing water. 
+
+% technical
+From a technical implementation perspective, CAESAR-Lisflood is a square-grid based model, which makes for easier interoperability with both terrain input data, and crucially, gridded rainfall datasets, such as from numerical weather prediction model output or rainfall radar data sources. Although there are advantages to using other grid meshes (as discussed in Chapter \ref{chapter_landscape_evol}), such as the triangular irregular grid in CHILD-based models, they come with an increased difficulty in interoperability with common square grid-based data formats, as the gridded data inputs need to be interpolated over the grid points of the irregular terrain mesh. If the input data changes rapidly through time, as rainfall data may do during a storm, then frequent re-interpolation is needed, increasing the computational cost of the simulation.
+
+%
+Moreover, the CAESAR-Lisflood model has a large existing community and support network, and is well established having been using in many landscape evolution modelling studies for over two decades \citep{valters2016modelling}. The model's original implementation (in the form of `CAESAR') was tested using upland catchments in the UK \citep{coulthard1999modelling}, and as will be presented in more detail in Chapter \ref{chapter_events}, this thesis will also be based on case studies from upland UK catchments. 
+
+For the reasons discussed above, CAESAR-Lisflood will be used as the basis for and implementation of a landscape evolution model for use in a high-performance computing environment, which is not currently possibly with the existing model due to its implementation in the C\# programming language. The functionality of the model will be extended further to work on multiprocessor parallel computing systems, and with an improved range of erosion laws. The development of this model is presented in Chapter \ref{chapter_HAIL-CAESAR}. A software framework for processing rainfall radar data from the UK rainfall radar system for use in CAESAR-Lisflood and derived models is presented in Chapter \ref{chapter_metdata}.
+
+ 
