--- a/literature.bib
+++ b/literature.bib
@@ -5536,3 +5536,38 @@ year = {2005}
   pages={539--555},
   year={2002}
 }
+@phdthesis{coulthard1999modelling,
+  title={Modelling upland catchment response to Holocene environmental change.},
+  author={Coulthard, Thomas James},
+  year={1999},
+  school={University of Leeds}
+}
+@article{goldberg1991every,
+  title={What every computer scientist should know about floating-point arithmetic},
+  author={Goldberg, David},
+  journal={ACM Computing Surveys (CSUR)},
+  volume={23},
+  number={1},
+  pages={5--48},
+  year={1991},
+  publisher={ACM}
+}
+@article{monniaux2008pitfalls,
+  title={The pitfalls of verifying floating-point computations},
+  author={Monniaux, David},
+  journal={ACM Transactions on Programming Languages and Systems (TOPLAS)},
+  volume={30},
+  number={3},
+  pages={12},
+  year={2008},
+  publisher={ACM}
+}
+@article{hong2013evaluation,
+  title={An evaluation of the software system dependency of a global atmospheric model},
+  author={Hong, Song-You and Koo, Myung-Seo and Jang, Jihyeon and Esther Kim, Jung-Eun and Park, Hoon and Joh, Min-Su and Kang, Ji-Hoon and Oh, Tae-Jin},
+  journal={Monthly Weather Review},
+  volume={141},
+  number={11},
+  pages={4165--4172},
+  year={2013}
+}
